POS/C#/Robotersteuerung/Robotersteuerung/ABNF.txt
<PROGRAM>			::=	<STATEMENT> { <STATEMENT> }
<STATEMENT>			::=	<MOVE> | <COLLECT> | <REPEAT> | <UNTIL> | <IF> | <BLOCK>
<MOVE>				::=	MOVE <DIRECTION>
<DIRECTION>			::=	LEFT | RIGHT | UP | DOWN
<COLLECT>			::=	"COLLECT"
<BLOCK>				::=	"{" <PROGRAM> "}"
<REPEAT>			::=	REPEAT <NUMBER> <BLOCK>
<NUMBER>			::=	<DIGIT> { <DIGIT> }
<DIGIT>				::=	0 | 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9
<IF> 				::=	IF <CONDITION> <BLOCK>
<UNTIL>				::= UNTIL <CONDITION> <BLOCK>
<CONDITION>			::= <DIRECTION> IS-A <OBJECT>
<OBJECT>			::= <LETTER> | OBSTACLE
<LETTER>			::= A | B | C | D | E | F | G | H | I | J | K | L | M | N | O | P | Q | R | S | T | U | V | W | X | Y | Z
